--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Jogo21.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Baralho.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Baralho\\Baralho\\dist\\Baralho.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Baralho.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
