--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,7 +25,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/Jogo21.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.Baralho.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Baralho\\Baralho\\dist\\Baralho.jar
+file.reference.Baralho.jar=lib\\Baralho.jar
 includes=**
 jar.compress=false
 javac.classpath=\
