--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,11 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Jogo21.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.Baralho.jar=lib\\Baralho.jar
+file.reference.apicartas.jar=lib\\apicartas.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Baralho.jar}
+    ${file.reference.apicartas.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
